Changelog
=========

0.13.3 (unreleased)
-------------------

- Add condition argument to set_trace


0.13.2 (2020-03-03)
-------------------

- Remove leftover debug code
  [gotcha]


0.13.1 (2020-02-28)
-------------------

- Fix when no configuration file
  [gotcha]


0.13.0 (2020-02-28)
-------------------

- Add option to set context via environment variable or configuration file
  [alexandrebarbaruiva]


0.12.3 (2019-12-03)
-------------------

- Fix version in usage
  [gotcha]


0.12.2 (2019-07-30)
-------------------

- Avoid emitting term-title bytes
  [steinnes]


0.12.1 (2019-07-26)
-------------------

- Fix --help 
  [native-api]


0.12 (2019-03-20)
-----------------

- Drop support for Python 3.3.x
  [bmw]
- Stop deprecation warnings from being raised when IPython >= 5.1 is used.
  Support for IPython < 5.1 has been dropped.
  [bmw]


0.11 (2018-02-15)
-----------------

- Simplify loading IPython and getting information from it.
  Drop support for python 2.6
  Drop support for IPython < 5.0.0
  [takluyver]


0.10.3 (2017-04-22)
-------------------

- For users using python 2.6, do not install IPython >= 2.0.0.
  And for users using python 2.7, do not install IPython >= 6.0.0.
  [vphilippon]
- Drop support for python 3.2.
  [vphilippon]
- Command line usage consistent with pdb - Add argument commands
  [zvodd]


0.10.2 (2017-01-25)
-------------------

- Ask IPython which debugger class to use.
  Closes https://github.com/gotcha/ipdb/issues/105
  [gnebehay, JBKahn] 

- ipdb.set_trace() does not ignore context arg anymore.
  Closes https://github.com/gotcha/ipdb/issues/93.
  [gnebehay, Garrett-R]


0.10.1 (2016-06-14)
-------------------

- Support IPython 5.0.
  [ngoldbaum]


0.10.0 (2016-04-29)
-------------------

- Stop trying to magically guess when stdout needs to be captured.
  Like needed by `nose`.
  Rather, provide a set of function that can be called explicitely when needed.
  [gotcha]

- drop support of IPython before 0.10.2

