@@ -4,7 +4,11 @@ Changelog
 0.13.3 (unreleased)
 -------------------
 
+- Allow runcall, runeval to also use set context value
+  [meowser]
+
 - Add condition argument to set_trace
+  [alexandrebarbaruiva]
 
 
 0.13.2 (2020-03-03)
